--- a/config/locales/views/imports/fr.yml
+++ b/config/locales/views/imports/fr.yml
@@ -174,6 +174,7 @@ fr:
       reverting: Annulation en cours
       uploading: Traitement des lignes
       view: Afficher
+      revert_confirm: Cela supprimera les transactions importées, mais vous pourrez toujours consulter et ré-importer vos données à tout moment.
     index:
       imports: Importations
       new: Nouvelle Importation
