--- a/config/locales/views/invite_codes/fr.yml
+++ b/config/locales/views/invite_codes/fr.yml
@@ -1,6 +1,8 @@
 ---
 fr:
   invite_codes:
+    invite_code:
+      delete_confirm: Êtes-vous sûr ?
     index:
       invite_code_description: Générez un nouveau code pour le voir affiché ici. Les codes générés qui ont été utilisés ne seront plus affichés.
       no_invite_codes: Aucun code à afficher
