--- a/config/locales/views/trades/fr.yml
+++ b/config/locales/views/trades/fr.yml
@@ -14,6 +14,7 @@ fr:
     header:
       buy: Acheter
       current_market_price_label: Prix du marché actuel
+      linked_with_plaid: Lié avec Plaid
       overview: Aperçu
       purchase_price_label: Prix d'achat
       purchase_qty_label: Quantité achetée
