--- a/config/locales/views/transactions/en.yml
+++ b/config/locales/views/transactions/en.yml
@@ -111,6 +111,7 @@ en:
       edit_merchants: Edit merchants
       edit_tags: Edit tags
       import: Import
+      linked_with_plaid: Linked with Plaid
     index:
       title: Transactions
       transaction: transaction
