Translate avatar preview alt text and version label

--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -160,6 +160,7 @@ en:
       choose: Upload photo
       choose_label: (optional)
       change: Change photo
+      preview_alt: Preview
     bank_sync:
       show:
         page_title: Bank Sync
