Translate doorkeeper OAuth authorization pages

--- a/config/locales/doorkeeper.en.yml
+++ b/config/locales/doorkeeper.en.yml
@@ -72,8 +72,11 @@ en:
         able_to: 'This application will be able to'
       show:
         title: 'Authorization code'
+        authorization_code_label: 'Authorization Code:'
+        copy_instructions: 'Copy this code and paste it into the application.'
       form_post:
         title: 'Submit this form'
+        redirecting: 'Redirecting you back to the application...'
 
     authorized_applications:
       confirmations:
