Translate footer, lunchflow page title, and guides page title
- Footer: copyright text, privacy policy, terms of service
- Lunchflow setup_accounts: page title
- Settings guides: page title

--- a/config/locales/views/lunchflow_items/fr.yml
+++ b/config/locales/views/lunchflow_items/fr.yml
@@ -4,3 +4,5 @@ fr:
     subtype_select:
       select_subtype: Sélectionnez le sous-type
       select_type: Sélectionnez le type
+    setup_accounts:
+      page_title: Configurer les comptes Lunch Flow
