--- a/config/locales/views/layouts/fr.yml
+++ b/config/locales/views/layouts/fr.yml
@@ -12,6 +12,10 @@ fr:
         other: "%{count} jours restants"
       upgrade: Passer à l'offre payante
     shared:
+      footer:
+        copyright: "(fork communautaire de Maybe Finance)"
+        privacy_policy: Politique de confidentialité
+        terms_of_service: Conditions d'utilisation
       confirm_dialog:
         title: Êtes-vous sûr(e) ?
         subtitle: Cette action est irréversible.
