--- a/config/locales/views/lunchflow_items/en.yml
+++ b/config/locales/views/lunchflow_items/en.yml
@@ -96,6 +96,7 @@ en:
       missing_parameters: Missing required parameters
       success: "Successfully linked %{account_name} with Lunch Flow"
     setup_accounts:
+      page_title: Set Up Lunch Flow Accounts
       account_type_label: "Account Type:"
       all_accounts_linked: "All your Lunch Flow accounts have already been set up."
       api_error: "API error: %{message}"
