--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -82,6 +82,10 @@ en:
       chart:
         balance: Balance
         owed: Amount owed
+        total_value: Total value
+        holdings: Holdings
+        cash: Cash
+        no_data: No data available
       menu:
         confirm_accept: Delete "%{name}"
         confirm_body_html: "<p>By deleting this account, you will erase its value
