--- a/config/locales/views/transfers/fr.yml
+++ b/config/locales/views/transfers/fr.yml
@@ -3,6 +3,7 @@ fr:
   transfers:
     account_links:
       data_error_missing_account: "Erreur de données : compte manquant"
+      transfer_id: "ID du transfert : %{id}"
     create:
       success: Transfert créé
     destroy:
